# epicycles

./: .gitignore  jungreis.py  links.txt  notebook.py  scratch.py
jungreis_lib/: CMakeLists.txt  jungreis.cpp
